fix overflow-x don't working on phone

--- a/dautay.css
+++ b/dautay.css
@@ -1423,7 +1423,9 @@ div#accordionExample {}
 }
 
 .subcribe .row {margin-left: -15px !important;margin-right: -15px !important;}
+
 body{
+    position:relative;
   font-family:helvetica neue,Helvetica,Arial,sans-serif;
   font-family: poppins !important;
   width:100%;
@@ -1435,7 +1437,10 @@ body{
   overflow-x: hidden;
   font-size: 14px;
 }
-
+/* overflow-x trong thẻ html để chạy trên trình duyệt điện thoại */
+html{
+    overflow-x:hidden;
+}
 
 .col-lg-8.col-md-6.contact p, .col-lg-8.col-md-6.contact ul li {
     color: #8a8a94;
@@ -2087,7 +2092,7 @@ position: absolute;background: black;width: 100%;height: 100%;left: 0;top: 0;opa
         margin-left: 37px;
     }
     .header-main ul.navbar-nav.mr-auto.ml-auto li a{
-        color:#ffffff;
+        color: #111111;
     }
     .header-main ul.navbar-nav.mr-auto.ml-auto li a{
         font-size:13px !important;
@@ -2097,6 +2102,10 @@ position: absolute;background: black;width: 100%;height: 100%;left: 0;top: 0;opa
     border-top:0.5px solid #313131;
     margin-left:0px;
     }
+
+.navbar-nav li.nav-item {
+    margin-left: 0px !important;
+}
     .header-main nav.navbar.navbar-expand-lg.bg-transparent{
         padding:0px;
     }
